# Robotic-arm

./: .gitignore  Frame_transform.drawio  Logic for pick and place.md  Objdetection cmds.cmd  README.md  best_model.sav  frames_2025-11-06_15.47.09.gv  frames_2025-11-13_15.57.04.gv  getting_test_data_cmds.cmd  main_tf_frame.gv  predictions.csv  snapshot.pcd  test.sav  training.sav
feature_extractor_pkg/: CMakeLists.txt  package.xml
feature_extractor_pkg/srv/: Classification.srv  FeatureExtraction.srv  GetSurfaceNormals.srv
my_pcl_processor/: CMakeLists.txt  package.xml
my_pcl_processor/include/my_pcl_processor/: features.h
my_pcl_processor/scripts/: clasification_service_node.py
my_pcl_processor/src/: cloud_transformer.cpp  feature_extractor.cpp  feature_extractor_for_model.cpp  pcd_saver_node.cpp  pcl_node.cpp  pcl_node_for_feture_ext.cpp
panda_description/: CMakeLists.txt  package.xml
panda_description/config/: ros2_controllers.yaml
panda_description/launch/: beer.launch.py  laptop.launch.py  panda_arm_and_sensor.launch.py  panda_gazebo.launch.py  panda_gazebo_with_obstacles.launch.py  panda_gazebo_with_table.launch.py  panda_ig_with_both.launch.py  test_sensor_pole.launch.py
panda_description/models/beer/: model.sdf
panda_description/models/cafe_table/: model.sdf
panda_description/models/cafe_table/meshes/: cafe_table.dae
panda_description/rviz/: Main.rviz
panda_description/urdf/: CamToHand.xacro  PoleSensor.urdf.xacro  panda.urdf.xacro  panda_arm.xacro  sensor_stick.gazebo.xacro  testSensorStick.xacro
panda_description/world/: Mainworld.sdf  SampleLaptop.sdf  beer.sdf  laptop.sdf  planning_world.sdf  pr2_perception.world
panda_moveit_control/src/: cartesian_space_planning.cpp  joint_space_planning.cpp  planning_with_obstacles.cpp
