<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>my_pcl_processor</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="padidarapuakhilsai@yahoo.com">akhil</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>


  <depend>rclcpp</depend>
  <depend>sensor_msgs</depend>
  <depend>pcl_conversions</depend>
  <depend>tf2_ros</depend>
  <depend>pcl_ros</depend>
  <depend>geometry_msgs</depend>
  <depend>feature_extractor_pkg</depend>
  <depend>visualization_msgs</depend>
  
<exec_depend>rclpy</exec_depend>
<exec_depend>python3-numpy</exec_depend>
<exec_depend>python3-scikit-learn</exec_depend>
  
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
